tests/negative/test_pass_eval_no_drop.orb
data Foo {
    x:i32
} (eval (fnc dropFoo (val:Foo::noDrop) () {}));

eval (fnc bar (f:Foo::noDrop) () {
    block Foo {
        pass f;
    };
});

fnc main () () {
    eval (sym f:Foo);
    eval (bar f);
};